httpbinlatest-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbinlatest
  namespace: yuanzhang
spec:
  type: ClusterIP
  selector:
    app: httpbinlatest
    author: yuanzhang
  ports:
    - port: 80
      protocol: TCP
      name: http
      targetPort: 80
