httpbintest-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: httpbintest
  namespace: yuanzhang
spec:
  rules:
    - host: httpbintest.myit.icu
      http:
        paths:
          - backend:
              serviceName: httpbintest
              servicePort: 80
